# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  flake.nix  spec.yaml
.github/workflow/: general.yaml
.github/workflows/: general.yaml
.sqlx/: query-91a9c0d35859f568c51bc4658be406bb58560c1d9ce489a082847d1ae025d8fc.json  query-d5932d385f74e87fab31d8833b885d67c517c632ae1b9909e75049151c7cceac.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20241228204809_create_subscriptions_table.sql  20250102123024_make_status_not_null_in_subscriptions.sql  20250102123140_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
