[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
reqwest = {version = "0.12.11", default-features = false, features = ["json", "rustls-tls"]}
config = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
# Database interactions
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
# Telemetry
env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
# Keep secret data from the logs
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
# To parse values from the environment
serde-aux = "4"
# Validation of domain
unicode-segmentation = "1"
# Better assertions in test
claims = "0.7"
# Validation in Type Driven Design
validator = "0.18"
# We need the `std_rng` to get access to the PRNG we want
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "2.0.9"
anyhow = "1.0.95"
# Authentication
base64 = "0.22"
# sha3 = "0.9" # obsolete over argon2
argon2 = { version = "0.5", features = ["std"] }
# user error messages
urlencoding = "2"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
# Fake data for testing
fake = "2.9"
# Property based testing
quickcheck = "1.0.3"
quickcheck_macros = "1"
rand = "0.8"
# Mocking for rest endpoints
wiremock = "0.6"
# Deserialize json in testcases
serde_json = "1"
# parsing links in tests
linkify = "0.10"
